added new style to floating text & re-design front page color

--- a/index.html
+++ b/index.html
@@ -6,13 +6,41 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>SyCode</title>
 </head>
 <body>
-  <div class="flex gap-2">
-    <a href="default.asp" class=""><img src="logo2.png" id="image-logo" class="rounded-lg" alt="logo2"> </a>
-    
-</div>
+
+    <div class="bg-gray-300 flex gap-3"  id="container">
+      <h2 id="text" class="p-4 bg-red-300 rounded-b-full">
+          <b><code>@ Sydoh-Teck</code></b> We are driven by<b><i> INNOVATION</i>
+          </b> because we have mastered the craft of IT to create value and experience!!!
+        </h2>
+    </div>
+    <div class=>
+      <div class="grid grid-cols-2 h-100% max-h-full" >
+      <a href="default.asp" class="">
+        <img src="logo2.png" id="image-logo" class="" alt="logo2" style="max-width:100%">
+      </a>
+      <div class="grid grid-rows-4 p-4 text-indigo-900">
+        <div id="tech" class="p-2"><code><b class="text-5xl">T-</b> <span class="text-4xl">Technology</span> 
+          </code>
+        </div>
+        <div id="tech" class="p-2"><code><b class="text-5xl">E-</b><span class="text-4xl">Expertise</span> 
+          </code>
+        </div>
+        <div id="tech" class="p-2"><code><b class="text-5xl">C-</b><span class="text-4xl">Cybersecurity</span> 
+          </code>
+        </div>
+      <div id="tech" class="p-2"><code><b class="text-5xl">K-</b><span class="text-4xl">Knowledge</span> 
+        </code>
+  </div>
+        <!-- <div><b class="text-4xl">E-</b></div>
+        <div><b class="text-4xl">C-</b></div>
+        <div><b class="text-4xl">K-</b>Knowledge</div> -->
+      </div>
+      </div>
+    </div>
     <header id="top-bar" class="h-100%">
       <div>
         <div>gold</div>
@@ -47,6 +75,8 @@
             }
           }
         }
+
+        
       </script>
 </body>
 </html>
