added new css to accronym TECK

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="bg-gray-300 flex gap-3"  id="container">
       <h2 id="text" class="p-4 bg-red-300 rounded-b-full">
           <b><code>@ Sydoh-Teck</code></b> We are driven by<b><i> INNOVATION</i>
-          </b> because we have mastered the craft of IT to create value and experience!!!
+          </b> because we have mastered the craft of<b> IT</b> to create value and experience!!!
         </h2>
     </div>
     <div class=>
@@ -22,18 +22,43 @@
       <a href="default.asp" class="">
         <img src="logo2.png" id="image-logo" class="" alt="logo2" style="max-width:100%">
       </a>
-      <div class="grid grid-rows-4 p-4 text-indigo-900">
-        <div id="tech" class="p-2"><code><b class="text-5xl">T-</b> <span class="text-4xl">Technology</span> 
+      <div class="grid grid-rows-4 p-1/2 text-indigo-900">
+        <div id="tech" class="p-2 grid grid-cols-2 border-2 rounded-b-full"><code><b class="text-3xl">T <i class="fa fa-laptop" aria-hidden="true "></i> </b><span class="text-2xl">Technology</span> 
           </code>
+          <div class="bg-gray-300 flex gap-3 rounded-b-full"  id="container">
+            <h2 id="text" class="p-4 bg-red-300 rounded-b-full">
+                <b><code>@ Sydoh-Teck</code></b> We are driven by<b><i> INNOVATION</i>
+                </b> because we have mastered the craft of<b> IT</b> to create value and experience!!!
+              </h2>
+          </div>
         </div>
-        <div id="tech" class="p-2"><code><b class="text-5xl">E-</b><span class="text-4xl">Expertise</span> 
+        <div id="tech" class="p-2 grid grid-cols-2 border-2 rounded-b-full"><code><b class="text-3xl">E <i class="fa fa-american-sign-language-interpreting" aria-hidden="true"></i></b><span class="text-2xl"> Expertise</span> 
           </code>
+          <div class="bg-gray-300 flex rounded-b-full"  id="container">
+            <h2 id="text" class="p-4 bg-red-300 rounded-b-full">
+                <b><code>@ Sydoh-Teck</code></b> We are driven by<b><i> INNOVATION</i>
+                </b> because we have mastered the craft of<b> IT</b> to create value and experience!!!
+              </h2>
+          </div>
         </div>
-        <div id="tech" class="p-2"><code><b class="text-5xl">C-</b><span class="text-4xl">Cybersecurity</span> 
+        <div id="tech" class="p-2 grid grid-cols-2 border-2 rounded-b-full"><code><b class="text-3xl">C <i class="fa fa-shield" aria-hidden="true"></i>  </b><span class="text-2xl">Cybersec</span> 
           </code>
+          <div class="bg-gray-300 flex gap-3 rounded-b-full"  id="container">
+            <h2 id="text" class="p-4 bg-red-300 rounded-b-full">
+                <b><code>@ Sydoh-Teck</code></b> We are driven by<b><i> INNOVATION</i>
+                </b> because we have mastered the craft of<b> IT</b> to create value and experience!!!
+              </h2>
+          </div>
         </div>
-      <div id="tech" class="p-2"><code><b class="text-5xl">K-</b><span class="text-4xl">Knowledge</span> 
+      <div id="tech" class="p-2 grid grid-cols-2 border-2 rounded-b-full"><code id="know"> <b class="text-3xl">K <i class="fa fa-book" aria-hidden="true"></i>
+      </b><span class="text-2xl"> Knowledge</span> 
         </code>
+        <div class="bg-gray-300 flex gap-3 rounded-b-full"  id="container">
+          <h2 id="text" class="p-4 bg-red-300 rounded-b-full">
+              <b><code>@ Sydoh-Teck</code></b> We are driven by<b><i> INNOVATION</i>
+              </b> because we have mastered the craft of<b> IT</b> to create value and experience!!!
+            </h2>
+        </div>
   </div>
         <!-- <div><b class="text-4xl">E-</b></div>
         <div><b class="text-4xl">C-</b></div>
